--- a/css/style.css
+++ b/css/style.css
@@ -559,7 +559,7 @@ a {
     min-height: 42px;
     box-sizing: border-box;
     padding-left: 13px;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
     margin-top: 3px;
 
 }
@@ -572,18 +572,19 @@ a {
     margin-left: 2px;
 }
 
+
 .bottom-link-wrap {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     padding-left: 15px;
-    padding-top: 0px;
 }
 
 .login-link {
     display: block;
     color: #323232;
     font-size: 13px;
-    line-height: 22px;
+    line-height: 24px;
+
 }
 
 .login-link:hover,
@@ -593,7 +594,7 @@ a {
 }
 
 .login-link-content {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid rgba(0, 0, 0, .3);
 }
 
 .login-link:hover .login-link-content,
@@ -823,9 +824,12 @@ a {
     visibility: hidden;
 }
 
+.slider-section {
+    position: relative;
+}
+
 .slide-offer {
     min-height: 200px;
-    position: relative;
     padding-top: 276px;
     text-align: center;
     color: #ffffff;
@@ -838,7 +842,7 @@ a {
     margin: -3px auto;
     margin-bottom: 31px;
     font-size: 60px;
-    line-height: 60px;
+    line-height: 60.35px;
     font-weight: 700;
 }
 
@@ -915,8 +919,8 @@ a {
     display: inline-block;
     padding: 12px 44px;
     font-weight: 600;
-    font-size: 31px;
-    line-height: 41px;
+    font-size: 32px;
+    line-height: 44px;
     text-align: center;
     color: #ffffff;
     vertical-align: top;
@@ -1147,6 +1151,7 @@ a {
 
 .catalog-item-price span {
     font-size: 30px;
+    line-height: 45px;
     font-weight: 700;
 }
 
@@ -1251,6 +1256,7 @@ a {
     margin-top: 23px;
     font-size: 16px;
     line-height: 22px;
+    font-weight: 400;
 }
 
 .features .slogan {
@@ -1946,27 +1952,19 @@ a {
     box-sizing: border-box;
     width: 415px;
     flex-wrap: wrap;
-    padding: 7px 7px 8px 15px;
+    padding: 7px 0px;
     margin: 0px 0px 0px 22px;
 
 }
 
-.fat-fieldset input[type="radio"]+label {
-    position: relative;
-    padding: 5px 0 0 34px;
-    cursor: pointer;
-    font-size: 16px;
-    line-height: 18px;
-}
-
 .fat-list .fat-option {
-    margin-right: 13px;
-    margin-left: 0px;
+    margin-right: 0px;
+    margin-left: 2px;
 }
 
-.fat-option label {
+ .fat-option label {
     position: relative;
-    padding: 5px 0 0 30px;
+    padding: 5px 0 0 47px;
     cursor: pointer;
     font-size: 16px;
     line-height: 18px;
@@ -1979,14 +1977,14 @@ a {
     -ms-flex-pack: distribute;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-right: 14px;
-    padding: 8px 15px 6px 6px;
+    margin-right: 15px;
+    padding: 8px 13px 6px 5px;
     box-sizing: border-box;
 }
 
 .fill-option {
     padding-left: 30px;
-    margin: -1px 10px 0px 12px;
+    margin: -1px 9px 0px 14px;
 }
 
 .fill-fieldset label {
@@ -1995,23 +1993,25 @@ a {
 }
 
 .fill-3 {
-    padding-left: 36px;
+    padding-left: 35px;
 }
 
 .fill-4 {
-    padding-left: 35px;
+    padding-left: 34px;
 }
 
 .fat-option label::before {
     content: "";
     background-image: url(../img/svg/radio-off.svg);
     background-repeat: no-repeat;
-    background-size: 22px 22px;
-    width: 22px;
-    height: 22px;
+    background-position:50%;
+    background-size: 20px 20px;
+    width: 20px;
+    height: 20px;
     position: absolute;
-    top: 4px;
-    left: 2px;
+    padding: 2px;
+    top: 2px;
+    left: 13px;
     opacity: 0.8;
 }
 
@@ -2022,45 +2022,64 @@ a {
 
 
 .fill-fieldset label::before {
-    content: "";
-    position: absolute;
-    left: -29px;
+    content: " ";
+    box-sizing: border-box;
+    left: -32px;
     top: -1px;
-    background-repeat: no-repeat;
+    width: 20px;
+    height: 20px;
+    border: 2px solid #ffffff;
     opacity: 0.8;
-    width: 22px;
-    height: 22px;
-    background-image: url(../img/svg/checkbox-off.svg);
-    background-size: 22px 22px;
+    border-radius: 2px;
+    position: absolute;
 }
 
-.fill-fieldset .input-checkbox:checked+label::before {
-    background-image: url(../img/svg/checkbox-on.svg);
-    background-repeat: no-repeat;
+.fill-fieldset .input-checkbox:checked+label::after {
+    content: "";
+    left: -29px;
+    top: 1px;
+    position: absolute;
+    width: 15px;
+    height: 5px;
+    border-left: 4px solid #ffffff;
+    border-bottom: 4px solid #ffffff;
     opacity: 0.8;
+    transform: rotate(-45deg);
+
 
 }
 
 /* Эффекты при наведении и блокировке (как пример 2 крайние кнопки) */
 
-.fill-fieldset .input-checkbox:hover+label::before,
-.fill-fieldset .input-checkbox:checked:hover+label::before {
+.fill-fieldset .input-checkbox:hover+label::before {
     opacity: 1;
 }
+
+.fill-fieldset .input-checkbox:checked:hover+label::after {
+    opacity: 1;
+}
+
+.fill-fieldset .input-checkbox:disabled+label::before,
+.fill-fieldset .input-checkbox:disabled+label::after {
+    opacity: 0.4;
+    pointer-events: none;
+}
+
+.fill-fieldset .input-checkbox:disabled+label {
+    pointer-events: none;
+}
+
 
 .fat-fieldset .input-radio:hover+label::before,
 .fat-fieldset .input-radio:checked:hover+label::before {
     opacity: 1;
 }
 
-
-.fill-fieldset .input-checkbox:disabled+label::before {
-    opacity: 0.4;
-}
-
 .fat-fieldset .input-radio:disabled+label::before {
     opacity: 0.4;
+    pointer-events: none;
 }
+
 
 .btn-filter {
     width: 144px;
@@ -2220,7 +2239,7 @@ a {
     border-radius: 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.8;
+    opacity: 0.7;
     border: 3px solid rgba(255, 255, 255, 0.5);
     -webkit-box-shadow: inset 0 0 0 1px #ffffff;
     box-shadow: inset 0 0 0 1px #ffffff;
@@ -2244,12 +2263,12 @@ a {
 
 .social-btn:hover,
 .social-btn:focus {
-    border: 3px solid rgba(255, 255, 255, 0.7);
+    opacity: 0.8;
+
 }
 
 .social-btn:active {
-    color: #ffffff;
-    border: 3px solid rgba(255, 255, 255, 0.8);
+    opacity: 0.9;
 }
 
 .about-us {
@@ -2289,7 +2308,7 @@ a {
     position: relative;
     margin-bottom: 5px;
     font-size: 13px;
-    line-height: 1.38;
+    line-height: 18px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
@@ -2322,8 +2341,8 @@ a {
 }
 
 .footer-copyright p {
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 13px;
+    line-height: 18px;
     margin: 0px;
     padding: 0px;
 }
