--- a/css/style.css
+++ b/css/style.css
@@ -452,7 +452,15 @@ a {
 }
 
 
-/*===== Стили плейсходдеров ====== */
+/*===== Стили плейсходдеров и текста в инпутах====== */
+
+[class$="-input"] {
+    color: #323232;
+    font: inherit;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+}
 
 [class$="-input"]::-webkit-input-placeholder {
     font-weight: 400;
@@ -1706,11 +1714,18 @@ a {
 .feed-back-input {
     width: 265px;
     min-height: 44px;
+    border: 1px solid #d3d3d2;
+    border-radius:5px;
+    outline: none;
+    color: #323232;
     background-color: #ffffff;
     box-sizing: border-box;
-    margin-top: 0;
     margin-bottom: 20px;
     padding: 14px 7px 13px 15px;
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    -ms-border-radius:5px;
+    -o-border-radius:5px;
 }
 
 .feed-back-input:hover {
@@ -1726,11 +1741,38 @@ a {
 
 .feed-back-popup textarea {
     width: 426px;
-    height: 153px;
+    border: 1px solid #d3d3d2;
+    border-radius:5px;
+    min-height: 153px;
     box-sizing: border-box;
     margin-bottom: 23px;
     resize: none;
     padding: 14px 0px 13px 15px;
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    -ms-border-radius:5px;
+    -o-border-radius:5px;
+}
+
+.feed-back-popup textarea:hover {
+    width: 426px;
+    border: 2px solid rgba(154, 154, 154, 0.52);
+    min-height: 153px;
+    box-sizing: border-box;
+    margin-bottom: 23px;
+    resize: none;
+    padding: 13px 0px 12px 14px;
+}
+
+.feed-back-popup textarea:focus {
+    width: 426px;
+    border: 2px solid rgba(46, 136, 228, 0.52);
+    outline: none;
+    min-height: 153px;
+    box-sizing: border-box;
+    margin-bottom: 23px;
+    resize: none;
+    padding: 13px 0px 12px 14px;
 }
 
 .feed-back-popup .popup-close {
